--- a/app/src/main/res/layout/fragment_session_in_progress.xml
+++ b/app/src/main/res/layout/fragment_session_in_progress.xml
@@ -32,25 +32,26 @@
 
     </RadioGroup>
 
-    <!--<Button-->
-        <!--style="?android:attr/buttonStyleSmall"-->
-        <!--android:id="@+id/previous_btn"-->
-        <!--android:text="@string/previous_btn"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_alignParentBottom="true"-->
-        <!--android:layout_alignParentLeft="true"-->
-        <!--android:layout_alignParentStart="true" />-->
+    <Button
+        style="?android:attr/buttonStyleSmall"
+        android:id="@+id/previous_btn"
+        android:text="@string/previous_btn"
+        android:visibility="invisible"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
-    <!--<Button-->
-        <!--style="?android:attr/buttonStyleSmall"-->
-        <!--android:id="@+id/next_btn"-->
-        <!--android:text="@string/next_btn"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_alignParentBottom="true"-->
-        <!--android:layout_alignParentRight="true"-->
-        <!--android:layout_alignParentEnd="true" />-->
+    <Button
+        style="?android:attr/buttonStyleSmall"
+        android:id="@+id/next_btn"
+        android:text="@string/next_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
 
     <Button
         android:layout_width="fill_parent"
