--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -4,78 +4,75 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
-    
-    <LinearLayout
-        android:id="@+id/userRow"
+    android:orientation="vertical"
+    android:background="@color/white"
+    android:focusableInTouchMode="true">
+
+    <EditText
+        android:id="@+id/userName_txt"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:paddingLeft="15dp"
-        android:weightSum="1">
+        android:gravity="center"
+        android:paddingTop="25dp"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:hint="Username"
+        android:text="a" />
 
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="fill_parent"
-            android:text="@string/login_user"
-            android:layout_weight="0.3"
-            android:gravity="center_vertical"/>
-
-        <EditText
-            android:id="@+id/userName_txt"
-            android:layout_width="0dp"
-            android:layout_height="fill_parent"
-            android:layout_weight="0.6"
-            android:text="a" />
-        
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/passRow"
+    <EditText
+        android:id="@+id/password_txt"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:paddingLeft="15dp"
-        android:weightSum="1"
-        android:layout_below="@+id/userRow" >
+        android:gravity="center"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:layout_below="@+id/userName_txt"
+        android:hint="Password"
+        android:text="b" />
 
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="fill_parent"
-            android:text="@string/login_password"
-            android:layout_weight="0.3"
-            android:gravity="center_vertical" />
+    <TextView
+        android:id="@+id/register_success_lbl"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textColor="@color/success"
+        android:visibility="invisible"
+        android:text="@string/register_user_success"
+        android:layout_below="@+id/password_txt"/>
 
-        <EditText
-            android:id="@+id/password_txt"
-            android:layout_width="0dp"
-            android:layout_height="fill_parent"
-            android:layout_weight="0.60"
-            android:text="b" />
-
-    </LinearLayout>
+    <TextView
+        android:id="@+id/err_lbl"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textColor="@color/error"
+        android:text="@string/err_please_enter_data"
+        android:visibility="invisible"
+        android:gravity="center"
+        android:layout_below="@+id/password_txt"/>
 
     <Button
         android:id="@+id/login_btn"
-        android:layout_width="fill_parent"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:text="@string/login_login_btn"
-        android:layout_below="@+id/passRow"/>
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:layout_below="@+id/register_success_lbl"
+        android:layout_centerHorizontal="true" />
 
     <Button
         android:id="@+id/register_btn"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="@string/login_register_btn"
-        android:layout_below="@+id/login_btn" />
+        android:layout_below="@+id/login_btn"
+        android:layout_centerHorizontal="true"
+        android:background="@color/white" />
 
-    <TextView
-        android:id="@+id/register_success_lbl"
+    <ImageView
+        android:id="@+id/imageView"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:visibility="invisible"
-        android:text="@string/register_user_success"
-        android:layout_below="@+id/register_btn"/>
+        android:layout_height="fill_parent"
+        android:src="@drawable/sick"
+        android:layout_below="@+id/register_btn" />
 
 
 </RelativeLayout>
