--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -4,68 +4,62 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@color/white"
+    android:focusableInTouchMode="true">
 
-    <LinearLayout
-        android:id="@+id/userRow"
+    <EditText
+        android:id="@+id/userName_txt"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:paddingLeft="15dp"
-        android:weightSum="1">
+        android:hint="Username"
+        android:gravity="center"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:paddingTop="25px"/>
 
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="fill_parent"
-            android:text="@string/login_user"
-            android:layout_weight="0.3"
-            android:gravity="center_vertical"/>
-
-        <EditText
-            android:id="@+id/userName_txt"
-            android:layout_width="0dp"
-            android:layout_height="fill_parent"
-            android:layout_weight="0.6"
-            />
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/passRow"
+    <EditText
+        android:id="@+id/password_txt"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:paddingLeft="15dp"
-        android:weightSum="1"
-        android:layout_below="@+id/userRow" >
+        android:hint="Password"
+        android:gravity="center"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:layout_below="@+id/userName_txt" />
 
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="fill_parent"
-            android:text="@string/login_password"
-            android:layout_weight="0.3"
-            android:gravity="center_vertical" />
-
-        <EditText
-            android:id="@+id/password_txt"
-            android:layout_width="0dp"
-            android:layout_height="fill_parent"
-            android:layout_weight="0.60" />
-
-    </LinearLayout>
+    <TextView
+        android:id="@+id/err_lbl"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textColor="@color/error"
+        android:text="@string/err_please_enter_data"
+        android:visibility="invisible"
+        android:gravity="center"
+        android:layout_below="@+id/password_txt"/>
 
     <Button
         android:id="@+id/register_btn"
-        android:layout_width="fill_parent"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:text="@string/login_register_btn"
-        android:layout_below="@+id/passRow" />
+        android:text="@string/register_register_btn"
+        android:layout_below="@+id/err_lbl"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:layout_centerHorizontal="true"/>
 
     <Button
         android:id="@+id/cancel_btn"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="Cancel"
+        android:text="@string/cancel_btn"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:background="@color/white"
         android:layout_below="@+id/register_btn"/>
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:src="@drawable/newperson"
+        android:layout_below="@+id/cancel_btn" />
 
 </RelativeLayout>
