--- a/app/src/main/res/layout/fragment_session_in_progress.xml
+++ b/app/src/main/res/layout/fragment_session_in_progress.xml
@@ -12,12 +12,16 @@
         android:id="@+id/session_question_txt"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:gravity="center"
         android:layout_centerHorizontal="true"/>
 
     <EditText
         android:id="@+id/session_answer_edit"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:gravity="center"
         android:layout_below="@+id/session_question_txt"
         android:visibility="invisible"
         android:layout_centerHorizontal="true" />
@@ -26,20 +30,41 @@
         android:id="@+id/answer_radio_group"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:gravity="center"
         android:layout_below="@+id/session_question_txt"
         android:visibility="invisible"
-        android:orientation="vertical">
+        android:orientation="vertical" />
 
-    </RadioGroup>
+    <Button
+        android:id="@+id/complete_btn"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/complete_btn"
+        android:visibility="invisible"
+        android:layout_below="@+id/session_answer_edit" />
+
+    <TextView
+        android:id="@+id/error_txt"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:visibility="invisible"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:gravity="center"
+        android:text="@string/err_please_make_selection"
+        android:textColor="@color/error"
+        android:layout_above="@+id/previous_btn"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
     <Button
         style="?android:attr/buttonStyleSmall"
         android:id="@+id/previous_btn"
         android:text="@string/previous_btn"
         android:visibility="invisible"
-        android:layout_width="wrap_content"
+        android:layout_width="100dp"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
+        android:layout_alignTop="@+id/next_btn"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
@@ -47,18 +72,13 @@
         style="?android:attr/buttonStyleSmall"
         android:id="@+id/next_btn"
         android:text="@string/next_btn"
-        android:layout_width="wrap_content"
+        android:layout_width="100dp"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_centerVertical="true"
+        android:layout_alignRight="@+id/complete_btn"
+        android:layout_alignEnd="@+id/complete_btn" />
 
-    <Button
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/complete_btn"
-        android:visibility="invisible"
-        android:id="@+id/complete_btn"
-        android:layout_below="@+id/session_answer_edit" />
+
+
 
 </RelativeLayout>
