--- a/app/src/main/res/layout/list_item_session_detail.xml
+++ b/app/src/main/res/layout/list_item_session_detail.xml
@@ -16,6 +16,7 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="0.2"
+            android:textAppearance="?android:attr/textAppearanceLarge"
             android:gravity="center"/>
 
         <LinearLayout
@@ -29,6 +30,7 @@
                 android:id="@+id/detail_question_txt"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceLarge"
                 android:paddingTop="10dp"
                 android:paddingBottom="5dp"
                 android:paddingLeft="10dp"/>
@@ -37,6 +39,7 @@
                 android:id="@+id/detail_answer_txt"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceLarge"
                 android:paddingTop="5dp"
                 android:paddingBottom="10dp"
                 android:paddingLeft="10dp" />
