--- a/app/src/main/res/layout/list_item_session_recorded.xml
+++ b/app/src/main/res/layout/list_item_session_recorded.xml
@@ -9,6 +9,7 @@
         android:id="@+id/session_title_txt"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
         android:paddingTop="10dp"
         android:paddingBottom="5dp"
         android:paddingLeft="10dp" />
@@ -17,6 +18,7 @@
         android:id="@+id/session_added_txt"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
         android:layout_below="@+id/session_title_txt"
         android:paddingTop="5dp"
         android:paddingBottom="10dp"
