--- a/app/src/main/res/layout/fragment_session_in_progress.xml
+++ b/app/src/main/res/layout/fragment_session_in_progress.xml
@@ -6,6 +6,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
+    android:background="@color/white"
     tools:context="com.shanechapman.sessions.app.ActiveSessionActivity">
 
     <TextView
@@ -57,24 +58,24 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
-    <Button
-        style="?android:attr/buttonStyleSmall"
+    <ImageButton
         android:id="@+id/previous_btn"
-        android:text="@string/previous_btn"
         android:visibility="invisible"
-        android:layout_width="100dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/next_btn"
+        android:src="@drawable/left_arrow_192"
+        android:background="@color/white"
+        android:layout_centerVertical="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
-    <Button
-        style="?android:attr/buttonStyleSmall"
+    <ImageButton
         android:id="@+id/next_btn"
-        android:text="@string/next_btn"
-        android:layout_width="100dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
+        android:src="@drawable/right_arrow_192"
+        android:background="@color/white"
         android:layout_alignRight="@+id/complete_btn"
         android:layout_alignEnd="@+id/complete_btn" />
 
